--- a/package.json
+++ b/package.json
@@ -108,10 +108,13 @@
     }
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
+    "electron-store": "^8.1.0",
     "electron-updater": "^5.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
   },
@@ -190,10 +193,12 @@
     "files": [
       "dist",
       "node_modules",
-      "package.json"
+      "package.json",
+      "./assets"
     ],
     "afterSign": ".erb/scripts/notarize.js",
     "mac": {
+      "icon": "./assets/spineIcon.icns",
       "target": {
         "target": "default",
         "arch": [
